[ADD] inclusão de estilos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Start</title>
 
     <!-- Main styles for this application -->
-    <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./app/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="./node_modules/angular-loading-bar/build/loading-bar.min.css" rel="stylesheet">
     <link href="./app/css/style.css" rel="stylesheet">
     <link href="./node_modules/toastr/build/toastr.min.css" rel="stylesheet">
@@ -35,6 +35,7 @@
 
     <!-- Starter plugins -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./app/assets/js/core/jquery.3.2.1.min.js"></script>
     <script src="./node_modules/moment/min/moment.min.js"></script>
 
     <!-- AngularJS -->
@@ -53,9 +54,10 @@
 
     <!-- Dependencies -->
     <script src="./node_modules/toastr/toastr.js"></script>
-    <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="./node_modules/popper.js/dist/umd/popper-utils.min.js"></script>
+    <script src="./app/assets/js/core/popper.min.js"></script>
+    <!-- <script src="./node_modules/popper.js/dist/umd/popper-utils.min.js"></script> -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./app/assets/js/core/bootstrap.min.js"></script>
 
     <!-- AngularJS CoreUI App scripts -->
     <script src="./app/js/config/app.js"></script>
