[FIX] integração das views base com o template

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- Main styles for this application -->
     <link href="./app/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./app/assets/css/light-bootstrap-dashboard.css" rel="stylesheet">
     <link href="./node_modules/angular-loading-bar/build/loading-bar.min.css" rel="stylesheet">
     <link href="./app/css/style.css" rel="stylesheet">
     <link href="./node_modules/toastr/build/toastr.min.css" rel="stylesheet">
@@ -34,7 +35,7 @@
     <ui-view></ui-view>
 
     <!-- Starter plugins -->
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="./node_modules/jquery/dist/jquery.min.js"></script> -->
     <script src="./app/assets/js/core/jquery.3.2.1.min.js"></script>
     <script src="./node_modules/moment/min/moment.min.js"></script>
 
@@ -56,8 +57,8 @@
     <script src="./node_modules/toastr/toastr.js"></script>
     <script src="./app/assets/js/core/popper.min.js"></script>
     <!-- <script src="./node_modules/popper.js/dist/umd/popper-utils.min.js"></script> -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./app/assets/js/core/bootstrap.min.js"></script>
+    <script src="./app/assets/js/light-bootstrap-dashboard.js"></script>
 
     <!-- AngularJS CoreUI App scripts -->
     <script src="./app/js/config/app.js"></script>
