[inicio] crud de usuario

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="./favicon.ico">
 
     <!-- Title -->
-    <title>Start</title>
+    <title>Futebol</title>
 
     <!-- Main styles for this application -->
     <link href="./app/assets/css/bootstrap.min.css" rel="stylesheet">
@@ -69,6 +69,7 @@
     <script src="./app/js/controllers/home/home.controller.js"></script>
     <script src="./app/js/controllers/login/login.controller.js"></script>
     <script src="./app/js/controllers/teste/teste.controller.js"></script>
+    <script src="./app/js/controllers/usuario/usuario.controller.js"></script>
 
     <!--Directives-->
 
@@ -78,5 +79,6 @@
     <!--Services-->
     <script src="./app/js/services/app.service.js"></script>
     <script src="./app/js/services/login.services.js"></script>
+    <script src="./app/js/services/usuario.service.js"></script>
 </body>
 </html>
